2003-07-30  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* conf/umount/umount_bsd44.c (umount_fs): convert to new way of
	unmounting which takes autofs into account.

2003-07-30  Ion Badulescu  <ionut@moisil.badula.org>

	* ALL: renamed MFF_AUTOFS to MFF_IS_AUTOFS; removed mf_real_mount
	hack; pass a new on_autofs argument to mount/umount function,
	based on the MFF_ON_AUTOFS mntfs flag

	* NEWS, README.autofs: updated

	* scripts/amd.conf.5: document new option autofs_use_lofs

	* scripts/amd.conf-sample (autofs_use_lofs): document new option

	* m4/macros/check_autofs_style.m4 (am_utils_link_files): symlink
	the autofs header as amu_autofs_prot.h instead of slurping it into
	aux_conf.h

	* libamu/mount_fs.c (mount_fs): removed old stub, renamed
	mount_fs2 to mount_fs, added new argument on_autofs

	* doc/am-utils.texi (Direct Automount Filesystem): document
	problems with nfs direct mounts on modern kernels, document good
	autofs support for direct mounts on Solaris
	(autofs_use_lofs Parameter): document this new option
	(browsable_dirs Parameter): note that mount storms are avoided
	when using autofs

	* conf/umount/umount_bsd44.c (umount_fs): removed old stub,
	renamed umount_fs2 to umount_fs

	* conf/umount/umount_osf.c (umount_fs): removed old stub,
	renamed umount_fs2 to umount_fs, added new argument on_autofs

	* conf/umount/umount_default.c (umount_fs): ditto as above; return
	an error on ENOENT instead of faking success

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_lookup_2_req): much
	simplified, now only consults the map for existance of the key and
	returns success if key is found
	(autofs_mount_2_req): request symlinks if CFM_AUTOFS_USE_LOFS is
	not on;
	(autofs_mount_2_free): implemented
	(autofs_unmount_2_req): use get_exported_ap() instead of
	referencing export_ap directly
	(autofs_mount_succeeded): remove code for replying to lookup
	requests, now only mount requests can end up here
	(autofs_mount_failed): ditto
